--- a/training-test.Rmd
+++ b/training-test.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 This is a Markdown that will end up on Github. Jillian added this line of text. 
 
-## Header 2
+## Second Header for Markdown (Ben's Version)
 
 This is more information that will be included in the RMarkdown document.
 
