--- a/index.rmd
+++ b/index.rmd
@@ -18,3 +18,5 @@ knitr::opts_chunk$set(echo = TRUE)
 - Linear models
 - Animal movement models based on telemetry
 - Data visualization
+
+### Bibliography
